--- a/Project3/index.html
+++ b/Project3/index.html
@@ -14,5 +14,6 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.1.2/howler.js"></script>
 
         <script src="scripts/main.js"></script>
+        <script src="scripts/classes.js"></script>
     </body>
 </html>
